@@ -1,3 +1,8 @@
+2015-03-20  Benno Schulenberg  <bensberg@justemail.net>
+	* src/nao.c (finish_stdin_pager, cancel_stdin_pager, stdin_pager):
+	Normalize the whitespace, remove an old comment, and place another
+	one better.
+
 2015-03-17  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_alt_speller): Do not set the modified flag when
 	an external spell checker didn't make any changes.  This fixes
